@@ -100,4 +100,59 @@ Last but not least, use `LIMIT` in your `SELECT` queries. This avoids
 fetching overwhelming data from database and exhausting the memory
 allocated to PHP.
 
+Minimizing Script Files
+-----------------------
+
+Complex pages often need to include many external JavaScript and CSS files. Because each file would cause one extra round trip to the server and back, we should minimize the number of script files by merging them into fewer ones. We should also consider reducing the size of each script file to reduce the network transmission time. There are many tools around to help on these two aspects.
+
+For a page generated by Yii, chances are that some script files are rendered by components that we do not want to modify (e.g. Yii core components, third-party components). In order to minimizing these script files, we need two steps.
+
+First, we declare the scripts to be minimized by configuring the [scriptMap|CClientScript::scriptMap] property of the [clientScript|CWebApplication::clientScript] application component. This can be done either in the application configuration or in code. For example,
+
+~~~
+[php]
+$cs=Yii::app()->clientScript;
+$cs->scriptMap=array(
+	'jquery.js'=>'/js/all.js',
+	'jquery.ajaxqueue.js'=>'/js/all.js',
+	'jquery.metadata.js'=>'/js/all.js',
+	......
+);
+~~~
+
+What the above code does is that it maps those JavaScript files to the URL `/js/all.js`. If any of these JavaScript files need to be included by some components, Yii will include the URL (once) instead of the individual script files.
+
+Second, we need to use some tools to merge (and perhaps compress) the JavaScript files into a single one and save it as `js/all.js`.
+
+The same trick also applies to CSS files.
+
+We can also improve page loading speed with the help of [Google AJAX Libraries API](http://code.google.com/apis/ajaxlibs/). For example, we can include `jquery.js` from Google servers instead of our own server. To do so, we first configure the `scriptMap` as follows,
+
+~~~
+[php]
+$cs=Yii::app()->clientScript;
+$cs->scriptMap=array(
+	'jquery.js'=>false,
+	'jquery.ajaxqueue.js'=>false,
+	'jquery.metadata.js'=>false,
+	......
+);
+~~~
+
+By mapping these script files to false, we prevent Yii from generating the code to include these files. Instead, we write the following code in our pages to explicitly include the script files from Google,
+
+~~~
+[php]
+<head>
+<?php echo CGoogleApi::bootstrap(); ?>
+
+<?php echo CHtml::script(
+	CGoogleApi::load('jquery','1.3.2') . "\n" .
+	CGoogleApi::load('jquery.ajaxqueue.js') . "\n" .
+	CGoogleApi::load('jquery.metadata.js')
+); ?>
+......
+</head>
+~~~
+
 <div class="revision">$Id$</div>
