@@ -17,14 +17,6 @@ to be a different one. Simply configure the
 properties of the [themeManager|CWebApplication::themeManager] application
 component to be the desired ones.
 
-When we call [render|CController::render] or
-[renderPartial|CController::renderPartial] to display a view, the
-corresponding view file as well as the layout file will be looked for in
-the currently active theme. And if found, those files will be rendered.
-Otherwise, it falls back to the default location as specified by
-[viewPath|CController::viewPath] and
-[layoutPath|CWebApplication::layoutPath].
-
 To activate a theme, set the [theme|CWebApplication::theme] property of
 the Web application to be the name of the desired theme. This can be done
 either in the [application
@@ -38,9 +30,26 @@ Contents under a theme directory should be organized in the same way as
 those under the [application base
 path](/doc/guide/basics.application#application-base-directory). For example, all view files
 must be located under `views`, layout view files under `views/layouts`, and
-system view files under `views/system`. Because the `views` directory may
-contain security-sensitive data, it should be configured to prevent from
-being accessed by Web users.
+system view files under `views/system`. For example, if we want to replace
+the `create` view of `PostController` with a view in the `classic` theme,
+we should save the new view file as `WebRoot/themes/classic/views/post/create.php`.
+
+For views belonging to controllers in a [module](/doc/guide/basics.module),
+the corresponding themed view files should also be placed under the `views`
+directory. For example, if the aforementioned `PostController` is in a module
+named `forum`, we should save the `create` view file as `WebRoot/themes/classic/views/forum/post/create.php`. If the `forum` module
+is nested in another module named `support`, then the view file should be
+`WebRoot/themes/classic/views/support/forum/post/create.php`.
+
+> Note: Beause the `views` directory may contain security-sensitive data, it should be configured to prevent from being accessed by Web users.
+
+When we call [render|CController::render] or
+[renderPartial|CController::renderPartial] to display a view, the
+corresponding view file as well as the layout file will be looked for in
+the currently active theme. And if found, those files will be rendered.
+Otherwise, it falls back to the default location as specified by
+[viewPath|CController::viewPath] and
+[layoutPath|CWebApplication::layoutPath].
 
 > Tip: Inside a theme view, we often need to link other theme resource
 files. For example, we may want to show an image file under the theme's
